UPDATE Folder structure updated

--- a/Striver-A2Z/C++/.vscode/tasks.json
+++ b/Striver-A2Z/C++/.vscode/tasks.json
@@ -19,7 +19,7 @@
       {
           "label": "compile and run",
           "type": "shell",
-          "command": "g++ -std=c++17 -o ${fileBasenameNoExtension} ${file} && ./${fileBasenameNoExtension} < input.txt > output.txt",
+          "command": "g++ -std=c++17 -o ./executable-files/${fileBasenameNoExtension} ${file} && ./executable-files/${fileBasenameNoExtension} < input.txt > output.txt",
           "group": {
               "kind": "build",
               "isDefault": true
