CREATE step1.1 -> 2.data-type.cpp

--- a/Striver-A2Z/C++/.gitignore
+++ b/Striver-A2Z/C++/.gitignore
@@ -1,5 +1,1 @@
-# Ignore files without extensions or a dot in their names
-*[^.]    # Matches files without extensions or a dot in their names
-
-# Allow folders without dots in their names
-!*/
+executable-files
