UPDATE 7.rearrange-array-in-alternating-positive-and-negative-elements.cpp : added optimal solution for variety 1

--- a/Striver-A2Z/C++/.vscode/settings.json
+++ b/Striver-A2Z/C++/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.associations": {
+    "*.cpp": "cpp",
     "__bit_reference": "cpp",
     "__bits": "cpp",
     "__config": "cpp",
@@ -98,6 +99,7 @@
     "shared_mutex": "cpp",
     "span": "cpp",
     "coroutine": "cpp",
-    "ranges": "cpp"
+    "ranges": "cpp",
+    "functional": "cpp"
   }
 }
